--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.12.3"
+    "mongo": "^0.1.0",
+    "mongoose": "^5.13.22"
   },
   "devDependencies": {
     "jest": "^26.6.3",
