--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest"
+    "test:frontend": "jest --config frontend/jest.config.js",
+    "test:backend": "jest --config backend/jest.config.js",
+    "test": "npm run test:frontend && npm run test:backend"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -16,8 +18,10 @@
     "mongoose": "^5.13.22"
   },
   "devDependencies": {
+    "babel-jest": "^29.7.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
-    "supertest": "^6.1.3"
+    "supertest": "^6.3.4"
   }
 }
